# FluidSim

./: CMakeLists.txt  README.md  config.json  config_schema.json
src/: main.cpp
src/MeshReconstruction/: marchingCubes.cu  marchingCubes.cuh  marchingCubesTables.cuh  neighborIndex.cu  neighborIndex.cuh  scalarField.cu  scalarField.cuh  sym3eig.cuh
src/parser/: parser_json.cu  parser_json.h
src/shaders/: compile.sh  grid.vert  gridVert.spv  instanceShader.vert  instanceVert.spv  meshVert.spv  meshVert.vert  sfInstVert.vert
src/simulation/: cudaCommons.h
src/simulation/ChronoCuda/: ChronoCuda.cu  ChronoCuda.h
src/simulation/cudaParticleSimulator/: cudaParticleSimulator.cu  cudaParticleSimulator.h
src/simulation/cudaParticleSimulator/Handlers/: extForces.cu  extrapolateVelocity.cu  markNarrowBand.cu  multigrid.cu  pressure_solver.cu  transfer.cu  updateSystem.cu
src/stats/: stats.h
src/vulkan/: buffer.cpp  buffer.h  device.cpp  initVulkan.cpp  offscreen.cpp  offscreen.h  pipeline.cpp  pipeline.h  stb_image_write.h  swapChain.cpp  swapChain.h  utils.cpp  utils.h
testResults/: config.md  report_performance.md  summary_table.md
